# nyc_property_taxes_local

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app_deploy/: app.py  borough_summary.json  sample_properties.json
data/: processed_labeled_data.parquet
milestones/: milestone1.md  milestone2.md  milestone3.md
models/: best_params.json  features.pkl  hgb.pkl  hgb_model.pkl  label_encoders.pkl  lgbm_model.pkl  linear_features.pkl  passive_aggressive.pkl  scaler.pkl  sgd_elasticnet.pkl  sgd_l1.pkl  sgd_l2.pkl  sgd_linear_classifier.pkl  tuning_checkpoint_lgbm.json  tuning_checkpoint_sgd_elasticnet.json  tuning_checkpoint_sgd_elasticnet_pca.json  tuning_checkpoint_sgd_l1.json  tuning_checkpoint_sgd_l1_pca.json  tuning_checkpoint_sgd_l2.json  tuning_checkpoint_sgd_l2_pca.json  valuation_classifier_v1.pkl
outputs/: all_model_results.csv  hgb_feature_importance.csv  lgbm_feature_importance.csv  linear_model_coefficients.csv  linear_model_results.csv  passive_aggressive_coefficients.csv  sgd_elasticnet_coefficients.csv  sgd_elasticnet_pca_explained_variance.csv  sgd_l1_coefficients.csv  sgd_l1_pca_explained_variance.csv  sgd_l2_coefficients.csv
python_scripts/: Assessment2023.py  adding_census_data.py  analysis.py  assessment_data.py  assessment_data_v2.py  assessment_v3.py  classifying_data.py  classifying_data_v2.py  diagnostics.py  feature_engineering.py  hyperparameter_tuning.py  linear_ml_models.py  merging.py  merging_assessment_data.py  ml_models.py  non_linear_ml_models.py  (+3 more)
(+2 files in other folders)
